# ohjelmistotekniikka_23

./: .gitignore  README.md  eka.txt  tiedosto.txt
laskarit/viikko1/: kolmas.txt  komentorivi.txt
laskarit/viikko2/: testikattavuus_raportti
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko3/: tehtava1_2.md  tehtava3.md  tehtava4.md  tehtava_1_kaavio.md
training_log_app/: .coveragerc  .env  .env.test  README.md  pyproject.toml  tasks.py
training_log_app/data/: database.sqlite  test_database.sqlite
training_log_app/documentation/: architecture.md  changelog.md  requirement_specification.md  testing.md  user_manual.md  working_time_record.md
training_log_app/src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
training_log_app/src/entities/: log_entry.py  user.py
training_log_app/src/repositories/: log_entry_repository.py  theme_repository.py  user_repository.py
training_log_app/src/services/: log_entry_service.py
training_log_app/src/tests/entities/: log_entry_test.py
training_log_app/src/tests/repositories/: log_entry_repository_test.py  theme_repository_test.py  user_repository_test.py
training_log_app/src/tests/services/: log_entry_service_test.py
training_log_app/src/ui/: app_style.py  browse_log_entries_view.py  create_new_user_view.py  login_view.py  main_user_page_view.py  new_log_entry_view.py  statistics_view.py  ui.py
training_log_app/src/ui/themes/: daymode.py  nightmode.py
weekly_assignments/week1/: gitlog.txt
(+2 files in other folders)
