[tool.poetry]
name = "src"
version = "0.1.0"
description = "Project for Ohjelmistotekniikka"
authors = ["Joona Nikula <nikulajoona@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
invoke = "^2.0.0"
bcrypt = "^4.0.1"
tkcalendar = "^1.6.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
coverage = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
